# ssh-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: ai-coding-tools.md  cluster-manual.md  cluster-profiles.md  legacy-transport.md  sist-ai-cluster.md  ssh-runtime.md
scripts/: quick_validate.py  ssh_registry.py  ssh_skill_server.py
scripts/ssh_skill/: ai_tool_profiles.py  ai_tooling.py  cluster_profiles.py  paths.py  registry.py  server.py  slurm_ops.py  ssh_config.py  ssh_ops.py
